# fts

./: .gitignore  README.md  Untitled.ipynb  Untitled1.ipynb  requirements.txt  sdkconfig.defaults  sdkconfig.defaults.fts_master  sdkconfig.defaults.fts_master2  sdkconfig.defaults.fts_master3  sdkconfig.defaults.fts_slave1  sdkconfig.defaults.fts_slave2  sdkconfig.defaults.fts_slave3  sdkconfig.defaults.fts_slave4  sdkconfig.defaults.fts_slave5  sdkconfig.defaults.fts_slave6
components/crm/: CMakeLists.txt  crm.c
components/dtc/: CMakeLists.txt  dtc.c
components/dtr/: CMakeLists.txt  Kconfig  dtr.c  dtr_gptimer.c  dtr_mcpwm.c
components/dtr/include/: dtr.h  dtr_backend.h
components/ftm/: CMakeLists.txt  ftm.c
components/fts_mqtt/: CMakeLists.txt  fts_mqtt.c
components/usb_uplink/: CMakeLists.txt  idf_component.yml  usb_uplink.c
components/ws2812/: CMakeLists.txt  ws2812.c
docs/: ISSUE-ANALYSIS-health-metrics-split-setup.md  NETWORK.md  USBIP.md  _config.yml  index.md  split-setup-health-metrics-analysis.md  wifi.md
docs/misc/: DATAFLOW.md  EXPERIMENTS.md  USBIP.md  wifi.md
docs/posts/: 20251211-index.md  20251220-network-operation-modes.md  20251221-backplane.md  (+6 more)
fts-platform/: .env.example  .env.example-local  .gitignore  README.md  docker-compose.split-local.yml  docker-compose.yml  requirements.txt
main/: CMakeLists.txt  Kconfig.projbuild  fts_main.c  fts_main.h
qa/: Untitled.ipynb  capture-analyse-606.ipynb  capture-analyse1-Copy1.ipynb  capture-analyse1-Copy2.ipynb  capture-analyse1.ipynb  capture-analyze.ipynb  requirements.txt
(+90 files in other folders)
